--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="./css/common.css" />
   <link rel="stylesheet" href="./css/main.css" />
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"
@@ -53,6 +54,7 @@
       crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <script defer src="./js/youtube.js"></script>
+    <script defer src="./js/common.js"></script>
     <script defer src="./js/main.js"></script>
     </head>
 
@@ -69,6 +71,7 @@
       <div class="sub-menu">
         <ul class="menu">
           <li>
+            <!--도메인/signin/index.html을 함축시킴-->
             <a href="/signin">Sign In</a>
           </li>
           <li>
